# magnus

./: .gitignore  COMMIT_MSG.tmp  README.md  pyproject.toml  requirements.txt
cli/: __init__.py  main.py
clients/: README.md
clients/desktop/: README.md  pubspec.yaml
clients/desktop/lib/: app.dart  main.dart
clients/desktop/lib/core/: constants.dart
clients/desktop/lib/core/di/: injector.dart
clients/desktop/lib/core/error/: failures.dart
clients/desktop/lib/core/network/: dio_client.dart
clients/desktop/lib/core/responsive/: breakpoints.dart
clients/desktop/lib/core/theme/: design_system.dart  magnus_theme.dart
clients/desktop/linux/: CMakeLists.txt
clients/desktop/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
clients/desktop/linux/runner/: my_application.cc
clients/desktop/macos/Flutter/: GeneratedPluginRegistrant.swift
clients/desktop/macos/Runner.xcodeproj/: project.pbxproj
clients/desktop/windows/: CMakeLists.txt
clients/desktop/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
clients/desktop/windows/runner/: Runner.rc  main.cpp
core/: __init__.py  compatibility.py  downloader.py  hardware.py  model_registry.py  runtime_manager.py  runtimes.py
daemon/: __init__.py  app.py
deploy/: Dockerfile  docker-compose.yml
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  CONVENTIONS.md  MODEL_MOUNTING.md  ROADMAP.md
tests/: test_compatibility.py  test_compatibility_extended.py  test_downloader.py  test_hardware.py  test_model_registry.py  test_runtime_manager.py  test_runtimes.py
(+12 files in other folders)
