[project]
name = "magnus"
version = "0.0.1"
description = "Magnus — SO de agentes local-first sobre hardware NVIDIA. Núcleo en Python; clientes (CLI, Flutter) hablan por una API local."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Backends de inferencia. Se instalan según el hardware de destino.
# vllm/trtllm requieren GPU NVIDIA + CUDA y NO se instalan en una laptop de dev.
serve = ["vllm>=0.5"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
magnus = "cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "daemon", "cli"]
